--- a/C#.net1/DemoApp/DemoApp.WebMVC/Views/Shared/_Layout.cshtml
+++ b/C#.net1/DemoApp/DemoApp.WebMVC/Views/Shared/_Layout.cshtml
@@ -280,7 +280,7 @@
 	<script src="~/Assets/js/nouislider.min.js"></script>
 	<script src="~/Assets/js/jquery.zoom.min.js"></script>
 	<script src="~/Assets/js/main.js"></script>
-
+	@RenderSection("Scripts", false)
 </body>
 </html>
 
