--- a/C#.net1/DemoApp/DemoApp.WebMVC/Views/Shared/_Layout.cshtml
+++ b/C#.net1/DemoApp/DemoApp.WebMVC/Views/Shared/_Layout.cshtml
@@ -280,6 +280,10 @@
 	<script src="~/Assets/js/nouislider.min.js"></script>
 	<script src="~/Assets/js/jquery.zoom.min.js"></script>
 	<script src="~/Assets/js/main.js"></script>
+	@*library*@
+	<script src="~/lib/bootbox.js/bootbox.min.js"></script>
+	<script src="~/lib/notify/notify.min.js"></script>
+	<script src="~/lib/twb-pgination.js"></script>
 	@RenderSection("Scripts", false)
 </body>
 </html>
