--- a/C#.net1/DemoApp/DemoApp.WebMVC/Views/Home/Index.cshtml
+++ b/C#.net1/DemoApp/DemoApp.WebMVC/Views/Home/Index.cshtml
@@ -1,88 +1,91 @@
-﻿
-	<!-- /NAVIGATION -->
-	<!-- BREADCRUMB -->
-	<div id="breadcrumb" class="section">
-		<!-- container -->
-		<div class="container">
-			<!-- row -->
-			<div class="row">
-				<div class="col-md-12">
-					<ul class="breadcrumb-tree">
-						<li><a href="#">Home</a></li>
-						<li><a href="#">All Categories</a></li>
-						<li><a href="#">Accessories</a></li>
-						<li class="active">Headphones (227,490 Results)</li>
-					</ul>
-				</div>
-			</div>
-			<!-- /row -->
-		</div>
-		<!-- /container -->
-	</div>
-	<!-- /BREADCRUMB -->
-	<!-- SECTION -->
-	<div class="section">
-		<!-- container -->
-		<div class="container">
-			<!-- row -->
-			<div class="row">
-				<!-- ASIDE -->
-				@await Html.PartialAsync("~/Views/Shared/_SideBar.cshtml")
-				<!-- /ASIDE -->
-				<!-- STORE -->
-				<div id="store" class="col-md-9">
-					<!-- store top filter -->
-					<div class="store-filter clearfix">
-						<div class="store-sort">
-							<label>
-								Sort By:
-								<select class="input-select">
-									<option value="0">Popular</option>
-									<option value="1">Position</option>
-								</select>
-							</label>
+﻿@model ProductListingPageModel
+<p id="txt-categoryId" hidden>@Model.CategoryId</p>
+<p id="txt-keyword" hidden>@Model.KeyWord</p>
 
-							<label>
-								Show:
-								<select class="input-select">
-									<option value="0">20</option>
-									<option value="1">50</option>
-								</select>
-							</label>
-						</div>
-						<ul class="store-grid">
-							<li class="active"><i class="fa fa-th"></i></li>
-							<li><a href="#"><i class="fa fa-th-list"></i></a></li>
-						</ul>
-					</div>
-					<!-- /store top filter -->
-					<!-- store products -->
-					<div class="row">
-					@await Html.PartialAsync("~/Views/Shared/ProductListPartial.cshtml")
-					</div>
-					<!-- /store products -->
-					<!-- store bottom filter -->
-					<div class="store-filter clearfix">
-						<span class="store-qty">Showing 20-100 products</span>
-						<ul class="store-pagination">
-							<li class="active">1</li>
-							<li><a href="#">2</a></li>
-							<li><a href="#">3</a></li>
-							<li><a href="#">4</a></li>
-							<li><a href="#"><i class="fa fa-angle-right"></i></a></li>
-						</ul>
-					</div>
-					<!-- /store bottom filter -->
-				</div>
-				<!-- /STORE -->
-			</div>
-			<!-- /row -->
-		</div>
-		<!-- /container -->
-	</div>
-	<!-- /SECTION -->
+<!-- BREADCRUMB -->
+<div id="breadcrumb" class="section">
+    <!-- container -->
+    <div class="container">
+        <!-- row -->
+        <div class="row">
+            <div class="col-md-12">
+                <ul class="breadcrumb-tree">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">All Categories</a></li>
+                    <li><a href="#">Accessories</a></li>
+                    <li class="active">Headphones (227,490 Results)</li>
+                </ul>
+            </div>
+        </div>
+        <!-- /row -->
+    </div>
+    <!-- /container -->
+</div>
+<!-- /BREADCRUMB -->
+<!-- SECTION -->
+<div class="section">
+    <!-- container -->
+    <div class="container">
+        <!-- row -->
+        <div class="row">
+            <!-- ASIDE -->
+            @await Html.PartialAsync("~/Views/Shared/_SideBar.cshtml", Model.Categories)
+            <!-- /ASIDE -->
+            <!-- STORE -->
+            <div id="store" class="col-md-9">
+                <!-- store top filter -->
+                <div class="store-filter clearfix">
+                    <div class="store-sort">
+                        <label>
+                            Sort By:
+                            <select class="input-select" id="product-order-by">
+                                @foreach (var item in Model.OrderBys)
+                                {
+                                    <option value="@item.Key">@item.Value</option>
+                                }
+
+                            </select>
+                        </label>
+
+                        <label>
+                            Show:
+                            <select class="input-select" id="product-page-size">
+                                @foreach (var item in Model.SelectPageSize)
+                                {
+                                    <option value="@item">@item</option>
+                                }
 
 
+                            </select>
+                        </label>
+                    </div>
+                    <ul class="store-grid">
+                        <li class="active"><i class="fa fa-th"></i></li>
+                        <li><a href="#"><i class="fa fa-th-list"></i></a></li>
+                    </ul>
+                </div>
+                <!-- /store top filter -->
+                <!-- store products -->
+                <div class="row" id="table-content">
+                </div>
 
+                <!-- /store products -->
+                <!-- store bottom filter -->
+                <div class="store-filter clearfix">
+                    <span class="store-qty">Showing 20-100 products</span>
+                    <div id="pagination">
+                    </div>
+                </div>
+                <!-- /store bottom filter -->
+            </div>
+            <!-- /STORE -->
+        </div>
+        <!-- /row -->
+    </div>
+    <!-- /container -->
+</div>
+<!-- /SECTION -->
+@section Scripts {
+    <script src="~/js/product-list.js"></script>
 
-	
+}
