--- a/C#.net1/DemoApp/DemoApp.WebMVC/Views/Shared/_SideBar.cshtml
+++ b/C#.net1/DemoApp/DemoApp.WebMVC/Views/Shared/_SideBar.cshtml
@@ -1,62 +1,34 @@
-﻿<div id="aside" class="col-md-3">
+﻿@using DemoApp.Domain.Models.Categories;
+
+@model List<CategoryViewModel>
+
+<div id="aside" class="col-md-3">
 	<!-- aside Widget -->
 	<div class="aside">
 		<h3 class="aside-title">Categories</h3>
 		<div class="checkbox-filter">
-
-			<div class="input-checkbox">
-				<input type="checkbox" id="category-1">
-				<label for="category-1">
+			<div class="input-radio">
+				<input value="" name="category" type="radio" id="category-all">
+				<label for="category-all">
 					<span></span>
-					Laptops
-					<small>(120)</small>
+					All
+					<small>(@Model.Sum(s => s.ProductCount)</small>
 				</label>
 			</div>
+			@foreach (var item in Model)
+			{
+				<div class="input-radio">
+					<input value="@item.Id" name="category" type="radio" id="category-@item.Id">
+					<label for="category-@item.Id">
+						<span></span>
+						@item.Name
+						<small>(@item.ProductCount)</small>
+					</label>
+				</div>
+			}
 
-			<div class="input-checkbox">
-				<input type="checkbox" id="category-2">
-				<label for="category-2">
-					<span></span>
-					Smartphones
-					<small>(740)</small>
-				</label>
-			</div>
 
-			<div class="input-checkbox">
-				<input type="checkbox" id="category-3">
-				<label for="category-3">
-					<span></span>
-					Cameras
-					<small>(1450)</small>
-				</label>
-			</div>
 
-			<div class="input-checkbox">
-				<input type="checkbox" id="category-4">
-				<label for="category-4">
-					<span></span>
-					Accessories
-					<small>(578)</small>
-				</label>
-			</div>
-
-			<div class="input-checkbox">
-				<input type="checkbox" id="category-5">
-				<label for="category-5">
-					<span></span>
-					Laptops
-					<small>(120)</small>
-				</label>
-			</div>
-
-			<div class="input-checkbox">
-				<input type="checkbox" id="category-6">
-				<label for="category-6">
-					<span></span>
-					Smartphones
-					<small>(740)</small>
-				</label>
-			</div>
 		</div>
 	</div>
 	<!-- /aside Widget -->
@@ -64,15 +36,15 @@
 	<div class="aside">
 		<h3 class="aside-title">Price</h3>
 		<div class="price-filter">
-			<div id="price-slider"></div>
+
 			<div class="input-number price-min">
-				<input id="price-min" type="number">
+				<input id="price-min" type="number" value="100000">
 				<span class="qty-up">+</span>
 				<span class="qty-down">-</span>
 			</div>
 			<span>-</span>
 			<div class="input-number price-max">
-				<input id="price-max" type="number">
+				<input id="price-max" type="number" value="5000000">
 				<span class="qty-up">+</span>
 				<span class="qty-down">-</span>
 			</div>
@@ -139,6 +111,7 @@
 		<h3 class="aside-title">Top selling</h3>
 		<div class="product-widget">
 			<div class="product-img">
+				<img src="~/Assets/img/product01.png" alt="">
 				<img src="~/Assets/img/product01.png" alt="">
 			</div>
 			<div class="product-body">
