--- a/C#.net1/DemoApp/DemoApp.WebMVC/Views/Shared/_AdminLayout.cshtml
+++ b/C#.net1/DemoApp/DemoApp.WebMVC/Views/Shared/_AdminLayout.cshtml
@@ -243,7 +243,7 @@
     </script>
     <script src="~/lib/bootbox.js/bootbox.min.js"></script>
     <script src="~/lib/notify/notify.min.js"></script>
-    <script src="~/js/twb-pgination.js"></script>
+    <script src="~/lib/twb-pgination.js"></script>
     @RenderSection("script", false)
 
 </body>
